--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
     <center><h2 style ="margin-bottom: 100px;">my experiences thus far<br></h2></center>
   <div class="row exp">
     <div class="col-sm-4">
-              <img src="iamges/logos/ib.png" alt="IB" width="150" >
+              <img src="images/logos/ib.png" alt="IB" width="150" >
         </div>
         <div class="col-sm-8">
       <h3 style=" margin-bottom: 0px; margin-top: 0px;font-weight:bold;;">Web Project Manager Intern</h3>
@@ -388,7 +388,7 @@
 
 
 
-<!-- Container (Contact Section) -->
+<!-- Container (Contact Section)
 <div id="contact" class="container-fluid">
   <h2 class="text-center">CONTACT</h2>
   <div class="row">
@@ -416,7 +416,7 @@
     </div>
   </div>
 </div>
-
+-->
 
 
 <footer class="container-fluid text-center">
