--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
       padding: 100px 25px;
       font-family: Montserrat, sans-serif;
   }
+
+  .jumbotron p {
+    font-size: 16px;
+  }
+
   .container-fluid {
       padding: 60px 50px;
   }
@@ -203,7 +208,7 @@
   <h1>&lt;<font color="#EE253F">Hann Lam</font></h1>
   <p><font color="#86DA00">style</font> = <font color="#E2D756">"background: Malaysian; personality: fun driven curious foodie explorer;"</font></p>
   <p><font color="#86DA00">class</font> = <font color="#E2D756">"Class of 2016"</font></p>
-  <p><font color="#86DA00">href</font> = <font color="#E2D756"><a href="https://www.linkedin.com/in/hannlamwoo" style="color: #E2D756">"https://goo.gl/hNwRkF"</a></font>&gt;</p>
+  <p><font color="#86DA00">link</font> = <font color="#E2D756"><a href="https://www.linkedin.com/in/hannlamwoo" style="color: #E2D756">"https://goo.gl/hNwRkF"</a></font>&gt;</p>
   <h1>&lt;/<font color="#EE253F">Woo</font>&gt;</h1>
 </div>
 
@@ -271,7 +276,7 @@
       				<h3 style=" margin-bottom: 0px; margin-top: 0px; font-weight:bold;">Studio Operational Finance and Planning Intern</h3>
       						<h4>The Walt Disney Company</h4>
       						<h4><i>From June 2015 to September 2015</i></h4>
-       						<p style=" margin-bottom: 40px;">Responsible for preparing the AOP and Quarterly budget for Disney Digital Services Studio (DDSS). Also conducted a cost drill down analysis to study how digital deliveries should be categorized and estimate a cost for a specific type of digital delivery.</p> 
+       						<p>Responsible for preparing the AOP and Quarterly budget for Disney Digital Services Studio (DDSS). Also conducted a cost drill down analysis to study how digital deliveries should be categorized and estimate a cost for a specific type of digital delivery.</p> 
 
                   <p>I had the ball of the time during this three month stint at Disney and was able to speak with professionals from the Studios, Consumer Products, Animation and much more. Also, this is the first time I managed a group of interns to create and mobile app called Baymax and pitched it to the CTO. Cannot deny that I love that Disneyland perk too :D</p>
     
@@ -295,7 +300,7 @@
   <br>
 	<div class="row exp ucla">
     		<div class="col-sm-4">
-              <img src="images/logos/ORLlogo.jpg" alt="ORL1" width="200">
+              <img src="images/logos/ORLlogo.png" alt="ORL1" width="200" style="display:block;">
               <img src="images/logos/ORL2.svg" alt="ORL2" width="200">
         </div>
         	<div class="col-sm-8">
@@ -311,13 +316,15 @@
   <br>
   <div class="row exp ucla">
     		<div class="col-sm-4">
-              <img src="images/logos/ucla.jpg" alt="UCLA" width="200">
+              <img src="images/logos/ucla.png" alt="UCLA" width="200">
         </div>
         	<div class="col-sm-8">
       				<h3 style=" margin-bottom: 0px; margin-top: 0px; font-weight:bold;"> University of California, Los Angeles</h3>
-      				<h4 style="margin-bottom: 7px;">B.S. Cognitive Science (Specialization in Computing)</h4>
-      				<h4 style="margin: 0px;">B.A. Economics (Specialization in Computing)</h4>
-      				<h4 style="margin-top: 7px;">Minor in Geospatial Information Systems and Technology</h4>
+        			<ul>
+                <li> <h4>B.S. Cognitive Science (Specialization in Computing)</h4></li>
+        				<li> <h4>B.A. Economics (Specialization in Computing)</h4></li>
+        				<li> <h4>Minor in Geospatial Information Systems and Technology</h4></li>
+              </ul>
       				<h4><i>Class of 2016</i></h4>
       				<p>I started my freshman year as a Psychology major but realized that my interest was not isolated to only one area of study. My classes exposed me to a range of fields from psychology and programming to the world of economics and finance and not exculuding the arts and planetary space science. I also had a great time picking new skills such as snowboarding and had the good opportunity of exploring the United States. </p>
     
