--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         <li><a href="#aboutme">About Me</a></li>
         <li><a href="#experience">Experience</a></li>
         <li><a href="#interests">Interests</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <!--<li><a href="#contact">Contact</a></li>-->
       </ul>
     </div>
   </div>
