--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
   <h1>&lt;<font color="#EE253F">Hann Lam</font></h1>
   <p><font color="#86DA00">style</font> = <font color="#E2D756">"background: Malaysian; personality: fun driven curious foodie explorer;"</font></p>
   <p><font color="#86DA00">class</font> = <font color="#E2D756">"Class of 2016"</font></p>
-  <p><font color="#86DA00">link</font> = <font color="#E2D756"><a href="https://www.linkedin.com/in/hannlamwoo" style="color: #E2D756">"https://goo.gl/hNwRkF"</a></font>&gt;</p>
+  <p><font color="#86DA00">linked(in)</font> = <font color="#E2D756"><a href="https://www.linkedin.com/in/hannlamwoo" style="color: #E2D756">"hannlamwoo"</a></font>&gt;</p>
   <h1>&lt;/<font color="#EE253F">Woo</font>&gt;</h1>
 </div>
 
