--- a/index.html
+++ b/index.html
@@ -257,15 +257,15 @@
     <div id = "japan" class="thumbnail-container">
       <div class="thumbnail">
         <img src="images/countries/japan.png" alt="Osaka" width="400" height="300">
-        <p><strong>Osaka</strong></p>
-        <p align="left">Did an exchange here prior to entering tertiary education. Did I tell you about the sashimi? It's amazing.</p>
+        <p><strong>Japan</strong></p>
+        <p align="left">Did an exchange at Osaka prior to entering tertiary education. Did I tell you about the sashimi? It's amazing.</p>
       </div>
     </div>
    	<div id ="usa" class="thumbnail-container">
       <div class="thumbnail">
-        <img src="images/countries/usa.png" alt="Los Angeles" width="400" height="300">
-        <p><strong>Los Angeles</strong></p>
-        <p align="left">A true Bruin. Explored the east coast and the west coast but yet to travel to the midwest. In love with the natural setting here. Four years and counting.</p>
+        <img src="images/countries/usa.png" alt="USA" width="400" height="300">
+        <p><strong>USA</strong></p>
+        <p align="left">A true Bruin. Lived in Los Angeles for 5 years and currently in San Francisco. Explored the east coast and the west coast but yet to travel to the midwest. In love with the natural setting here. Four years and counting.</p>
       </div>
     </div>
     </div>
@@ -275,15 +275,27 @@
 <!-- experience -->
 <div id="experience" class="container-fluid">
     <center><h2 style ="margin-bottom: 100px;">my experiences thus far<br></h2></center>
-  <div class="row exp">
+<div class="row exp">
+    <div class="col-sm-4">
+              <img src="images/logos/ib.png" alt="Google" width="150" >
+        </div>
+        <div class="col-sm-8">
+      <h3 style=" margin-bottom: 0px; margin-top: 0px;font-weight:bold;;">Operations Lead</h3>
+      <h4>Google via Adecco</h4>
+      <h4><i>February 2017<i></h4>
+      <p style=" margin-bottom: 40px;">Working on Google Maps! </p>
+    </div>
+  </div>
+  <br>  
+<div class="row exp">
     <div class="col-sm-4">
               <img src="images/logos/ib.png" alt="IB" width="150" >
         </div>
         <div class="col-sm-8">
       <h3 style=" margin-bottom: 0px; margin-top: 0px;font-weight:bold;;">Web Project Manager Intern</h3>
       <h4>Internet Brands</h4>
-      <h4><i>Since September 2016</i></h4>
-      <p style=" margin-bottom: 40px;">Curently managing a team of onshore and offshore developers to release features for Full Slate and Demandforce, such as Rails upgrade and HIPAA compliance. The experience with the steepest learning curve yet because of the technical requirements for the job. I am still learning a lot about end to end web application development, both front and back end. Could not be more thankful for this opportunity. </p>
+      <h4><i>From September 2016 to January 2017</i></h4>
+      <p style=" margin-bottom: 40px;">Managed a team of onshore and offshore developers to release features for Full Slate and Demandforce, such as Rails upgrade and HIPAA compliance. The experience with the steepest learning curve yet because of the technical requirements for the job. I learnt a lot about end to end web application development, both front and back end. A truly eye opening role albeit challenging </p>
     </div>
   </div>
   <br>
