--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
       <div class="thumbnail">
         <img src="images/countries/usa.png" alt="USA" width="400" height="300">
         <p><strong>USA</strong></p>
-        <p align="left">A true Bruin. Lived in Los Angeles for 5 years and currently in San Francisco. Explored the east coast and the west coast but yet to travel to the midwest. In love with the natural setting here. Four years and counting.</p>
+        <p align="left">A true Bruin. Lived in Los Angeles for 5 years and currently in San Francisco. Explored the east coast and the west coast but yet to travel to the midwest. In love with the natural landscape here.</p>
       </div>
     </div>
     </div>
@@ -277,13 +277,13 @@
     <center><h2 style ="margin-bottom: 100px;">my experiences thus far<br></h2></center>
 <div class="row exp">
     <div class="col-sm-4">
-              <img src="images/logos/ib.png" alt="Google" width="150" >
+              <img src="images/logos/google.png" alt="Google" width="150" >
         </div>
         <div class="col-sm-8">
       <h3 style=" margin-bottom: 0px; margin-top: 0px;font-weight:bold;;">Operations Lead</h3>
       <h4>Google via Adecco</h4>
       <h4><i>February 2017<i></h4>
-      <p style=" margin-bottom: 40px;">Working on Google Maps! </p>
+      <p style=" margin-bottom: 40px;">Currently manage an aerial imagery pipeline which feeds to various Geo products in Google. Never imagined that I would have the chance to push the boundaries of technology in the fields of computer vision and camera hardware systems fresh out of college! Thankful for all my peers for their patience in explaining concepts to me and my managers for entrusting me with some of the coolest projects I've ever worked on. I also gained a lot of weight here because of snacking a.k.a Google 15 </p>
     </div>
   </div>
   <br>  
