--- a/index.html
+++ b/index.html
@@ -244,28 +244,28 @@
       <div class="thumbnail">
         <img src="images/countries/malaysia.png" alt="Malaysia" width="400" height="300">
         <p><strong>Malaysia</strong></p>
-        <p align="left">Born and raised. Grew up eating nasi lemak and roti canai which may or may not have contributed to my size.</p>
+        <p align="left">Born and raised. Grew up eating nasi lemak and roti canai which may or may not have contributed to my size. Oh and bak kut teh, chilli pan mee, chicken rice, char kueh teow, rojak.... sorry I digress when it comes to food</p>
       </div>
     </div>
     <div id = "singapore" class="thumbnail-container">
       <div class="thumbnail">
         <img src="images/countries/singapore.png" alt="Singapore" width="400" height="300">
         <p><strong>Singapore</strong></p>
-        <p align="left">Studied here for 5 years. I bleed Hainanese Chicken Rice. And talk about public transport efficiency and cleanest place ever.</p>
+        <p align="left">Studied here for 5 years. I bleed Hainanese Chicken Rice. Talk about public transport efficiency, cool looking buildings and cleanest place ever. </p>
       </div>
     </div>
     <div id = "japan" class="thumbnail-container">
       <div class="thumbnail">
         <img src="images/countries/japan.png" alt="Osaka" width="400" height="300">
         <p><strong>Japan</strong></p>
-        <p align="left">Did an exchange at Osaka prior to entering tertiary education. Did I tell you about the sashimi? It's amazing.</p>
+        <p align="left">Was here for an exchange at Osaka prior to college. Did I tell you about the sashimi? It's amazing. Like, really amazing. Of course it's a fun place too!</p>
       </div>
     </div>
    	<div id ="usa" class="thumbnail-container">
       <div class="thumbnail">
         <img src="images/countries/usa.png" alt="USA" width="400" height="300">
         <p><strong>USA</strong></p>
-        <p align="left">A true Bruin. Lived in Los Angeles for 5 years and currently in San Francisco. Explored the east coast and the west coast but yet to travel to the midwest. In love with the natural landscape here.</p>
+        <p align="left">A true Bruin. Lived in Los Angeles for 5 years and currently in San Francisco. West coast best coast (for now...?). In love with the natural landscape here (and Amazon Prime)</p>
       </div>
     </div>
     </div>
@@ -282,7 +282,7 @@
         <div class="col-sm-8">
       <h3 style=" margin-bottom: 0px; margin-top: 0px;font-weight:bold;;">Operations Lead</h3>
       <h4>Google via Adecco</h4>
-      <h4><i>February 2017<i></h4>
+      <h4><i>Since February 2017<i></h4>
       <p style=" margin-bottom: 40px;">Currently manage an aerial imagery pipeline which feeds to various Geo products in Google. Never imagined that I would have the chance to push the boundaries of technology in the fields of computer vision and camera hardware systems fresh out of college! Thankful for all my peers for their patience in explaining concepts to me and my managers for entrusting me with some of the coolest projects I've ever worked on. I also gained a lot of weight here because of snacking a.k.a Google 15 </p>
     </div>
   </div>
@@ -360,7 +360,7 @@
         				<li> <h4>Minor in Geospatial Information Systems and Technology</h4></li>
               </ul>
       				<h4><i>Class of 2016</i></h4>
-      				<p>I started my freshman year as a Psychology major but realized that my interest was not isolated to only one area of study. My classes exposed me to a range of fields from psychology and programming to the world of economics and finance and not exculuding the arts and planetary space science. I also had a great time picking new skills such as snowboarding and had the good opportunity of exploring the United States. </p>
+      				<p>I started my freshman year as a Psychology major but realized that my interest was not isolated to only one area of study. My classes exposed me to a range of fields from psychology and programming to the world of economics and finance and not excluding the arts and planetary space science. I also had a great time picking new skills such as snowboarding and had the good opportunity of exploring the United States. </p>
     
     		</div>
   </div>
@@ -393,17 +393,17 @@
     <div class="col-sm-4">
       <span class="glyphicon glyphicon-cutlery logo-small"></span>
       <h4>Food</h4>
-      <p>My motto: Happy tummy happy Hann-y.</p>
+      <p>My motto: Happy tummy happy Hann-y. True story.</p>
     </div>
     <div class="col-sm-4">
       <i class="fa fa-globe logo-small"></i>
       <h4>Exploring the world</h4>
-      <p>Nature or city, i dig it. Love learning about and experiencing different cultures.</p>
+      <p>Nature or city, I dig it. Love learning about and experiencing different cultures.</p>
     </div>
     <div class="col-sm-4">
       <i class="fa fa-book logo-small"></i>
       <h4>Manga</h4>
-      <p>On my journey with the Strawhat pirates to find One Piece. Aspire to be a hero like Saitama one day.</p>
+      <p>On my journey with the Strawhat pirates to find One Piece. I also aspire to be a hero like Saitama one day.</p>
     </div>
   </div>
   <br>
@@ -411,17 +411,17 @@
     <div class="col-sm-4">
       <i class="fa fa-code logo-small"></i>
       <h4>GIS and Technology</h4>
-      <p>Love learning about random tech stuff. Satellites and maps are cool.</p>
+      <p>Love learning about random tech stuff. Satellites and maps are cool. Don't forget about space too.</p>
     </div>
     <div class="col-sm-4">
       <span class="glyphicon glyphicon-music logo-small"></span>
       <h4>Movies, TV Shows and Music</h4>
-      <p>HIMYM, Friends and Master of None. Love Bollywood movies. John Mayer and James Bay anyone?</p>
+      <p>Brooklyn 99, The Office, HIMYM, Westworld and Master of None. Love Bollywood movies. John Mayer and James Bay anyone?</p>
     </div>
     <div class="col-sm-4">
       <i class="fa fa-dribbble logo-small"></i>
       <h4>NBA</h4>
-      <p>Somebody please give Chris Paul a ring already.</p>
+      <p>Somebody please give Chris Paul a ring already. I also watch Ball in the Family, which is essentially like the Kardashians.</p>
     </div>
   </div>
 </div>
