--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
 <div id = "jumbotron" class="jumbotron text-center">
   <h1>&lt;<font color="#EE253F">Hann Lam</font></h1>
-  <p><font color="#86DA00">style</font> = <font color="#E2D756">"background: Malaysian; personality: fun driven curious foodie explorer;"</font></p>
+  <p><font color="#86DA00">style</font> = <font color="#E2D756">"background: Malaysian ACSian Bruin; personality: fun driven curious foodie explorer;"</font></p>
   <p><font color="#86DA00">class</font> = <font color="#E2D756">"Class of 2016"</font></p>
   <p><font color="#86DA00">linked(in)</font> = <font color="#E2D756"><a href="https://www.linkedin.com/in/hannlamwoo" style="color: #E2D756">"hannlamwoo"</a></font>&gt;</p>
   <h1>&lt;/<font color="#EE253F">Woo</font>&gt;</h1>
@@ -283,7 +283,8 @@
       <h3 style=" margin-bottom: 0px; margin-top: 0px;font-weight:bold;;">Operations Lead</h3>
       <h4>Google via Adecco</h4>
       <h4><i>Since February 2017<i></h4>
-      <p style=" margin-bottom: 40px;">Currently manage an aerial imagery pipeline which feeds to various Geo products in Google. Never imagined that I would have the chance to push the boundaries of technology in the fields of computer vision and camera hardware systems fresh out of college! Thankful for all my peers for their patience in explaining concepts to me and my managers for entrusting me with some of the coolest projects I've ever worked on. I also gained a lot of weight here because of snacking a.k.a Google 15 </p>
+	      <p>Currently manage an imagery pipeline that feeds into various Geo products. I work closely with external partners, hardware team and data engineering team to ensure that our aerial imagery products are of the highest quality. I have also been involved in getting imagery for crisis response, e.g. Hurricane Harvey and Irma. Created different tools to help with reporting and statistical analysis. Got myself into fascinating projects led by other teams! </p>
+	      <p style=" margin-bottom: 40px;">Never imagined that I would have the chance to push the boundaries of technology in the fields of computer vision and camera hardware systems fresh out of college! Thankful for all my peers for their patience in explaining these concepts to me and my managers for entrusting me with some of the coolest projects I've ever worked on. I also gained a lot of weight here because of snacking a.k.a Google 15 </p>
     </div>
   </div>
   <br>  
@@ -295,8 +296,9 @@
       <h3 style=" margin-bottom: 0px; margin-top: 0px;font-weight:bold;;">Web Project Manager Intern</h3>
       <h4>Internet Brands</h4>
       <h4><i>From September 2016 to January 2017</i></h4>
-      <p style=" margin-bottom: 40px;">Managed a team of onshore and offshore developers to release features for Full Slate and Demandforce, such as Rails upgrade and HIPAA compliance. The experience with the steepest learning curve yet because of the technical requirements for the job. I learnt a lot about end to end web application development, both front and back end. A truly eye opening role albeit challenging </p>
-    </div>
+      <p>Managed a team of onshore and offshore developers to release features for Full Slate and Demandforce. During my short stint there, I conducted an product HIPAA compliance assessement and prioritized necessary fixes to ensure that the product meet the target deadline. I worked with the lead engineer to carry out a full stack Rails upgrade, and facilitated a Postgres migration. </p>
+    <p style=" margin-bottom: 40px;">This is the experience with the steepest learning curve yet because of the technical requirements for the job. I learnt a lot about end to end web application development, both front and back end. It was definitely tough at first when I had to deal with my first outage, but I soon learnt how tackle these problems in a more structured fashion. A truly eye opening role albeit challenging./p>
+	</div>
   </div>
   <br>
 
