Updated career changes and interests
- Updated Google entry
- Modified interests
- Added Overwatch

--- a/index.html
+++ b/index.html
@@ -282,8 +282,8 @@
         <div class="col-sm-8">
       <h3 style=" margin-bottom: 0px; margin-top: 0px;font-weight:bold;;">Operations Lead</h3>
       <h4>Google via Adecco</h4>
-      <h4><i>Since February 2017<i></h4>
-	      <p>Currently manage an imagery pipeline that feeds into various Geo products. I work closely with external partners, hardware team and data engineering team to ensure that our aerial imagery products are of the highest quality. Develop different tools to help with reporting and statistical analysis and sometimes get myself into fascinating geo imagery projects led by other teams! Also involved in getting imagery for crisis response, e.g. Hurricane Harvey and Irma. </p>
+      <h4><i>From February 2017 to February 2019<i></h4>
+	      <p>Managed an aerial imagery pipeline that feeds into various Geo products from acquisition to publication. I worked closely with external partners, hardware team and data engineering team to ensure that our aerial imagery products are of the highest quality. Developed different tools and dashboards to help with reporting and statistical analysis and sometimes get myself into fascinating geo imagery projects led by other teams! Also involved in getting imagery for crisis response, e.g. Hurricane Harvey and Irma. Towards the end of my tenure, I jumped into a new project and conducted a product analysis to identify obstacles that we would need to address before serving new 3D imagery products to our consumers. It was a very exciting journey as this was never done before and a huge learning experience as I was forced out of my comfort zone.</p>
 	      <p style=" margin-bottom: 40px;">Never imagined that I would have the chance to push the boundaries of technology in the fields of computer vision and camera hardware systems fresh out of college! Thankful for all my peers for their patience in explaining these concepts to me and my managers for entrusting me with some of the coolest projects I've ever worked on. I also gained a lot of weight here because of snacking a.k.a Google 15. </p>
     </div>
   </div>
@@ -314,7 +314,7 @@
       						<h4><i>From June 2015 to September 2015</i></h4>
        						<p>Responsible for preparing the AOP and Quarterly budget for Disney Digital Services Studio (DDSS). Also conducted a cost drill down analysis to study how digital deliveries should be categorized and estimate a cost for a specific type of digital delivery.</p> 
 
-                  <p>I had the ball of the time during this three month stint at Disney and was able to speak with professionals from the Studios, Consumer Products, Animation and much more. Also, this is the first time I managed a group of interns to create and mobile app called Baymax and pitched it to the CTO. Cannot deny that I love that Disneyland perk too :D</p>
+                  <p>I had the ball of the time during this three month stint at Disney and was able to speak with professionals from the Studios, Consumer Products, Animation and much more. Also, this is the first time I managed a group of interns to create and mobile app called <a href="https://drive.google.com/file/d/1G--mAij8RZJRLoutvynR9UZ4nONaK3Zf/view">Baymax</a> and pitched it to the CTO. Cannot deny that I love that Disneyland perk too :D</p>
     
     			</div>
   	</div>
@@ -395,7 +395,7 @@
     <div class="col-sm-4">
       <span class="glyphicon glyphicon-cutlery logo-small"></span>
       <h4>Food</h4>
-      <p>My motto: Happy tummy happy Hann-y. True story.</p>
+      <p>My motto: Happy tummy happy Hann-y. True story. Also, favourite food: Malaysian food hands down. Nothing beats the taste of home. I'm biased, I know.</p>
     </div>
     <div class="col-sm-4">
       <i class="fa fa-globe logo-small"></i>
@@ -404,8 +404,8 @@
     </div>
     <div class="col-sm-4">
       <i class="fa fa-book logo-small"></i>
-      <h4>Manga</h4>
-      <p>On my journey with the Strawhat pirates to find One Piece. I also aspire to be a hero like Saitama one day.</p>
+      <h4>Manga and non fiction books</h4>
+      <p>On my journey with the Strawhat pirates to find One Piece. I also aspire to be a hero like Saitama one day. Trevor Noah's <i>Born a Crime</i> and Atul Gawande's <i>Being Mortal</i> are my most recent favourite books.</p>
     </div>
   </div>
   <br>
@@ -413,17 +413,17 @@
     <div class="col-sm-4">
       <i class="fa fa-code logo-small"></i>
       <h4>GIS and Technology</h4>
-      <p>Love learning about random tech stuff. Satellites and maps are cool. Don't forget about space too.</p>
+      <p>Love learning about random tech stuff. Satellites, aerial imagery and maps are cool. Don't forget about space too. Interested to learn more about self driving and health tech.</p>
     </div>
     <div class="col-sm-4">
       <span class="glyphicon glyphicon-music logo-small"></span>
       <h4>Movies, TV Shows and Music</h4>
-      <p>Brooklyn 99, The Office, HIMYM, Westworld and Master of None. Love Bollywood movies. John Mayer and James Bay anyone?</p>
+      <p>Brooklyn 99, The Office, HIMYM, Westworld and Master of None. Love Bollywood movies. John Mayer, James Bay, Young the Giant or Leon Bridges anyone?</p>
     </div>
     <div class="col-sm-4">
       <i class="fa fa-dribbble logo-small"></i>
-      <h4>NBA</h4>
-      <p>Somebody please give Chris Paul a ring already. I also watch Ball in the Family, which is essentially like the Kardashians.</p>
+      <h4>NBA and Overwatch</h4>
+      <p>Somebody please give Chris Paul a ring already. Huge fan of Overwatch. Their character design is on point with amazing back stories.</p>
     </div>
   </div>
 </div>
